<resources>
    <string name="app_name">TP3</string>
    <string name="exercice_1">Exercice 1</string>
    <string name="exercice_7">Exercice 7</string>
    <string name="exercice_6">Exercice 6</string>
    <string name="exercice_5">Exercice 5</string>
    <string name="exercice_4">Exercice 4</string>
    <string name="exercice_3">Exercice 3</string>
    <string name="exercice_2">Exercice 2</string>
    <string name="exercice_8">Exercice 8</string>
    <string name="exercice_9">Exercice 9</string>
    <string name="login">Login</string>
    <string name="password">Mot de passe</string>
    <string name="nom">Nom</string>
    <string name="date_naissance">Date de naissance</string>
    <string name="num_telephone">Numéro de téléphone</string>
    <string name="mail">Adresse mail</string>
    <string name="interet">Centre d\'intérêt : </string>
    <string name="sport">Sport</string>
    <string name="musique">Musique</string>
    <string name="cinema">Cinéma</string>
    <string name="soumettre">Soumettre</string>
    <string name="nouvelle_inscription">Nouvelle Inscription</string>
    <string name="connexion">Connexion</string>
    <string name="entrez_votre_login">Entrez votre login</string>
    <string name="entrez_votre_mot_de_passe">Entrez votre mot de passe</string>
    <string name="saisissez_votre_planning_journalier">Saisissez votre planning journalier</string>
    <string name="_08h_10h">08h-10h</string>
    <string name="_10h_12h">10h-12h</string>
    <string name="_14h_16h">14h-16h</string>
    <string name="_16h_18h">16h-18h</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="s_lectionnez_une_date_yyyy_mm_dd">Sélectionnez une date yyyy-MM-dd</string>
    <string name="choisir_une_date">Choisir une date</string>
    <string name="synth_se_du_planning">Synthèse du Planning</string>
    <string name="go_back">Go Back</string>
    <string name="afficher_planning">Afficher Planning</string>
</resources>