<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentPlanning">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_lectionnez_une_date_yyyy_mm_dd"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/buttonDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choisir_une_date"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saisissez_votre_planning_journalier"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/et_08_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_08h_10h"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_10_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_10h_12h"
                android:inputType="text"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/et_14_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_14h_16h"
                android:inputType="text"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/et_16_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_16h_18h"
                android:inputType="text"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enregistrer"
                android:layout_marginTop="16dp"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>