<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selectexo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectExo">

    <Button
        android:id="@+id/button_exo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercice_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="125dp" />

    <Button
        android:id="@+id/button_exo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/exercice_2"
        app:layout_constraintTop_toBottomOf="@+id/button_exo1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button_exo3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/exercice_3"
        app:layout_constraintTop_toBottomOf="@+id/button_exo2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button_exo4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/exercice_4"
        app:layout_constraintTop_toBottomOf="@+id/button_exo3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button_exo5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/exercice_5"
        app:layout_constraintTop_toBottomOf="@+id/button_exo4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button_exo6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/exercice_6"
        app:layout_constraintTop_toBottomOf="@+id/button_exo5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button_exo7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/exercice_7"
        app:layout_constraintTop_toBottomOf="@+id/button_exo6"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button_exo8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/exercice_8"
        app:layout_constraintTop_toBottomOf="@+id/button_exo7"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button_exo9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/exercice_9"
        app:layout_constraintTop_toBottomOf="@+id/button_exo8"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />



</androidx.constraintlayout.widget.ConstraintLayout>